--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "jwt-decode": "^2.2.0",
     "less": "^3.8.0",
     "less-loader": "^4.1.0",
     "vue": "^2.5.2",
