--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,7 @@
     "passport": "^0.3.2",
     "passport-github": "^1.1.0",
     "sequelize": "^4.38.1",
-    "sqlite3": "^4.0.2"
+    "sqlite3": "5.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
